--- a/update.ini
+++ b/update.ini
@@ -1,7 +1,8 @@
 # Yellow update files
 
 Plugin: YellowStreamlist
-Version: 0.6.4
+Version: 0.7.1
+Published: 2017-07-07 12:00:00
 Author: Nibreh
 
 system/plugins/streamlist.php: streamlist.php,create,update
